--- a/styles/global.css
+++ b/styles/global.css
@@ -5,9 +5,13 @@
 }
 
 body {
-  width: 1100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 1100px;
   margin: 0 auto;
   font-family: Raleway, sans-serif;
+  padding: 95px 24px 88px 24px;
 }
 
 h1,
