--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,341 @@
-/* место для вашего кода */
+.header {
+  display: flex;
+  align-items: center;
+  padding: 92px 24px 96px 24px;
+  width: 1052px;
+}
+
+.header__menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  line-height: 21.13px;
+  font-size: 18px;
+  font-weight: 400;
+  font-family: Raleway, sans-serif;
+}
+
+.header__links-list {
+  display: flex;
+  column-gap: 34px;
+  justify-self: center;
+}
+
+.header__links-list-item {
+  list-style: circle;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
+}
+
+.header__link_active {
+  text-decoration: none;
+}
+
+.header__link {
+  text-decoration-thickness: 0.5px;
+  text-underline-offset: 4px;
+}
+
+.header__logo {
+  justify-self: center;
+  align-self: center;
+  display: flex;
+  max-width: 148px;
+  max-height: 105px;
+  margin-left: 41px;
+}
+
+.address {
+  font-family: Raleway, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24.3px;
+}
+
+.header__address {
+  margin-left: 184px;
+  list-style: none;
+}
+
+.cover {
+  position: relative;
+  width: 1100px;
+  background-image: url("../images/cover.jpg");
+  background-position: center;
+  background-size: cover;
+  padding: 165px 50px 51px 50px;
+}
+
+.overlay {
+  position: absolute;
+  background-color: #000;
+  inset: 0;
+  opacity: 60%;
+}
+
+.cover__title {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  color: #fff;
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 100px;
+  text-transform: uppercase;
+  letter-spacing: 0.3em;
+}
+
+.aligned-text_top {
+  text-align: left;
+}
+
+.aligned-text_center {
+  text-align: center;
+}
+
+.aligned-text_right {
+  text-align: right;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 0.6em;
+}
+
+.no-letter-spacing {
+  letter-spacing: 0px;
+}
+
+.cover__description {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  font-family: Raleway, sans-serif;
+  color: #fff;
+  text-transform: uppercase;
+  margin-top: 135px;
+  margin-left: 30px;
+}
+
+.cover__description-text {
+  font-weight: 400;
+  font-size: 22px;
+  word-spacing: 18px;
+}
+
+.bet-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 500;
+  font-size: 22px;
+  color: #fff;
+  background-color: transparent;
+  width: 256px;
+  height: 51px;
+  border: 1px solid #fff;
+  text-transform: uppercase;
+  margin-left: 75px;
+}
+
+.lots {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 1052px;
+  height: 692px;
+  margin: 179px 24px 146px 24px;
+  font-family: Raleway, sans-serif;
+}
+
+.lots__heading {
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
+  padding-left: 40px;
+}
+
+.lots__card-list {
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+  gap: 25px;
+  padding-top: 27px;
+}
+
+.lots__card-list-item {
+  flex-grow: 1;
+}
+
+.card-link {
+  text-decoration: none;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+  width: 334px;
+  min-height: 563px;
+  line-height: 24px;
+  padding: 51px 40px 48px 40px;
+  margin-bottom: 30px;
+}
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.card__title {
+  font-weight: 700;
+  font-size: 22px;
+  color: #fff;
+  z-index: 1;
+  position: relative;
+  text-decoration: underline;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 3px;
+  text-transform: uppercase;
+}
+
+.card__text {
+  font-weight: 400;
+  font-size: 20px;
+  color: #fff;
+  z-index: 1;
+  position: relative;
+}
+
+.lots__look-more-link {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 5px;
+  padding-left: 40px;
+}
+
+.about {
+  display: flex;
+  width: 1052px;
+}
+
+.about__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 240px;
+  height: 240px;
+  background-color: #000;
+  border-radius: 50%;
+  margin: 35px 0 0 73px;
+}
+
+.about__logo-image {
+  width: 60%;
+  height: 60%;
+}
+
+.about__column {
+  display: flex;
+  flex-direction: column;
+  font-family: Raleway, sans-serif;
+  width: 693px;
+  padding-top: 136px;
+  margin-left: 78px;
+}
+
+.about__title {
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+.about__text {
+  font-weight: 400;
+  font-size: 20px;
+}
+
+.about__text__indent {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  padding-top: 100px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  width: 1000px;
+  margin-top: 180px;
+}
+
+.footer__address {
+  list-style: none;
+}
+
+.footer__link {
+  text-decoration-thickness: 0.5px;
+  text-underline-offset: 4px;
+}
+
+.footer__menu {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  font-family: Raleway, sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  margin-left: 35px;
+}
+
+.footer__menu-list {
+  list-style: none;
+  text-decoration-thickness: 0.5px;
+  text-underline-offset: 4px;
+}
+
+.footer__menu-list-item {
+  line-height: 21.13px;
+}
+
+.footer__menu-link {
+  text-decoration: underline;
+}
+
+.footer__menu-link_active {
+  text-decoration: none;
+}
+
+.footer__column {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__social-list {
+  display: flex;
+  list-style: none;
+  gap: 48px;
+}
+
+.footer__social-list-item {
+  width: 48px;
+  height: 48px;
+}
